# gpu-p2p-test

./: CMakeLists.txt  README.md  auto.py
common/: CMakeLists.txt  common.h  lz_context.cpp  lz_context.h  ocl_context.cpp  ocl_context.h
interop/: CMakeLists.txt  interop.cpp  ocloc.sh
lz-sysman-query/: CMakeLists.txt  query.cpp
lz_add/: CMakeLists.txt  add.cpp  add_kernel.cl  add_kernel_dg2.spv  ocloc.sh
lz_p2p/: CMakeLists.txt  add_kernel.cl  add_kernel_dg2.spv  context.cpp  context.h  lz_p2p.cpp  p2p.cpp
memtest/: CMakeLists.txt  main.cpp
ocl_lz_interop/: CMakeLists.txt  common.h  lz_context.h  ocl_context.cpp
ocl_p2p/: CMakeLists.txt  common.h  context.cpp  context.h  main.cpp
